manifests/forecaster_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: forecaster
spec:
  ports:
  - port: 80
    targetPort: 3100
  selector:
    app: forecaster
